--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,70 @@
 .App {
   text-align: center;
+  display: flex;
+  background-color: #282c34;
+  color: white;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.sidemenu {
+  width: 240px;
+  padding: 10px;
+
+  background-color: #202123;
+}
+
+.side-menu-button {
+  padding: 12px;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: left;
+  transition: ease 0.25s all;
+}
+
+.side-menu-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.span-menu-button span {
+  padding-left: 6px;
+  padding-right: 12px;
+}
+
+.chatbox {
+  flex: 1;
+  border: 1px white;
+  background-color: #343541;
+  position: relative;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.chat-input-holder {
+  padding: 12px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.chat-input-textarea {
+  background-color: #40414f;
+  width: 90%;
+  padding: 12px;
+  color: white;
+  font-size: 1.25em;
+  border-radius: 5px;
+  border: none;
+
+  outline: none;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +86,43 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.chat-log {
+  text-align: left;
+}
+
+.chat-message.chatgpt {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.chat-message-center {
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: flex-start;
+  padding: 12px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.avatar-wrapper {
+  width: 40px;
+  height: 40px;
+  flex: 0 0 40px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  flex-shrink: 0;
+}
+.message {
+  padding-left: 16px;
+  padding-right: 40px;
 }
 
 @keyframes App-logo-spin {
